<resources>
    <string name="app_name">Contactos</string>
    <string name="Titulo_nuevo">Nuevo contacto</string>
    <string name="Titulo_switch">Cambiar vista</string>
    <string name="Titulo_search">Buscar contacto...</string>

    <string name="titulo_edad">Edad</string>
    <string name="titulo_peso">Peso</string>
    <string name="titulo_telefono">Telefono</string>
    <string name="titulo_email">Email</string>
    <string name="titulo_direccion">Direccion</string>
    <string name="titulo_eliminar_contacto">Eliminar contacto</string>

</resources>